--- a/BankClient/BankClient/Kontoverwaltung.xaml
+++ b/BankClient/BankClient/Kontoverwaltung.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
         Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
-    <Grid>
-        <Button x:Name="Log_out" Content="Logout" Click="Logout" Margin="887,40,56.6,0" VerticalAlignment="Top" Height="88" FontSize="30"/>
+    <Grid Background="#FFA2C5E8">
+        <Button x:Name="Log_out" Background="#FFDA8383" Content="Logout" Click="Logout" Margin="887,40,56.6,0" VerticalAlignment="Top" Height="88" FontSize="30"/>
         <Button x:Name="Back" Content="Zurück" Click="Zurück" Margin="637,544,61.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
         <Button x:Name="NewCreditAcc" Content="neues Kreditkonto?" HorizontalAlignment="Left" Margin="66,544,0,0" VerticalAlignment="Top" Width="222" Height="88" Click="NewCreditAcc_Click" FontSize="24" />
         <Button x:Name="NewDepositAcc" Content="neues Sparkonto?" HorizontalAlignment="Left" Margin="349,544,0,0" VerticalAlignment="Top" Width="222" Height="88" Click="NewDepositAcc_Click" FontSize="24"/>
