--- a/BankClient/BankClient/Login.xaml
+++ b/BankClient/BankClient/Login.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
 
-    <Grid>
+    <Grid Background="#FFA2C5E8">
         <Button x:Name="button" Content="Zurück" Click="zurück" Margin="637,544,61.6,0" VerticalAlignment="Top" Width="500" Height="88" FontSize="30"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="47,76,0,0" TextWrapping="Wrap" Text="Geben Sie bitte Ihren Vornamen ein: " FontSize="24" Height="32" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="47,221,0,0" TextWrapping="Wrap" Height="32" VerticalAlignment="Top"><Run Text="Geben Sie bitte Ihren Nachnamen ein:" FontSize="24"/></TextBlock>
