--- a/BankClient/BankClient/MainWindow.xaml
+++ b/BankClient/BankClient/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BankClient"
         mc:Ignorable="d"
         Title="Bank" Height="700" Width="1200" WindowStartupLocation = "CenterScreen">
-    <Grid>
+    <Grid Background="#FFA2C5E8">
         <Button x:Name="reg" Click="register" Content="Neu bei uns?" HorizontalAlignment="Left" Margin="46,228,0,0" VerticalAlignment="Top" Width="482" Height="95" FontSize="30"/>
         <Button x:Name="logon" Click="login" Content="Hier Einloggen!" Margin="637,228,37.6,0" VerticalAlignment="Top" Height="95" FontSize="30"/>
         <Label x:Name="label" Content="Willkommen beim Bank Client" Height="75" Margin="250,33,234.6,0" VerticalAlignment="Top" FontSize="50" HorizontalAlignment="Center"/>
